<resources>
    <string name="app_name">Interfaz_usuario</string>
    <string name="texto_iniciar">START_SERVICE</string>
    <string name="texto_pausa">PAUSE_SERVICE</string>
    <string name="texto_stop">STOP_SERVICE</string>
    <string name="texto_time">Time</string>
    <string name="texto_name">First Name</string>
    <string name="text_apellido">Last Name</string>
    <string name="texto_submit">Submit</string>
    <string name="texto_open">Open…</string>
    <string name="texto_shortcut_open">Ctrl-O</string>
    <string name="texto_save">Save…</string>
    <string name="texto_shortcut_save">Ctrl-S</string>
    <string name="texto_save_as">Save As…</string>
    <string name="texto_shortcut_saveAs">Ctrl-Shift-S</string>
    <string name="texto_x">X</string>
    <string name="texto_import">Import…</string>
    <string name="texto_export">Export…</string>
    <string name="texto_shortcut_export">Ctrl-E</string>
    <string name="texto_quit">Quit</string>
    <string name="texto_llamar">Llamar</string>
    <string name="texto_favoritos">Favoritos</string>
</resources>