<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_principal"
    tools:context=".LinearActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_start"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_iniciar"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_pause"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_pausa"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_stop"
            android:textSize="15sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>